feat: sync all local frontend+backend changes before UI comparison